2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb,
	  hd_change_background_dialog_append_backgrounds,
	  hd_change_background_dialog_init): Fix for new themes directory
	  layout. Fix for new bg iamge gconf paths.

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

	* src/hd-notification-manager.c (hd_notification_manager_notify): Do
	  not assert that an icon is set. Fixes NB#94962

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_dispose): Unref proxy.
	  (hd_change_background_dialog_set_property,
	   hd_change_background_dialog_class_init): Add proxy property
	  (response_cb): Fix selecting image. Fixes NB#95247
	  (hd_change_background_dialog_init,
	   hd_change_background_dialog_new): Add a D-Bus proxy argument and
	   property.
	* src/hd-change-background-dialog.h (hd_change_background_dialog_new):
	  Add a D-Bus proxy argument.

	* src/hd-hildon-home-dbus.c (change_background_clicked_cb):

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelogs

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (hd_incoming_events_notified): Do not show
	a visual notification for incoming-call notifications. Fixes NB#94960.

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c
	(hd_bookmark_manager_parse_bookmark_files): Really fix the broken
	parse bookmark function. Fixes NB#95149

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Increase required libhildondesktop version.

	* debian/control: Increase required libhildondesktop1-dev version.

	* src/hd-bookmark-manager.c
	  (hd_bookmark_manager_parse_bookmark_files): Do not use broken backup